--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,8 +16,21 @@ jobs:
           exit 1
       - name: Set Pull Request status
         if: failure()
-        uses: peter-evans/set-pull-request-status@v1
+        uses: actions/github-script@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          state: failure
-          description: The pull request failed the checks
-          context: Continuous Integration
+          script: |
+            const octokit = require("@octokit/rest")();
+            octokit.authenticate({
+              type: "token",
+              token: process.env.GITHUB_TOKEN
+            });
+            await octokit.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: context.sha,
+              state: "failure",
+              description: "The pull request failed the checks",
+              context: "Continuous Integration"
+            });
