--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Lock main branch
         run: |
           curl -X PUT \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer ${{ secrets.token }}" \
           -H "Accept: application/vnd.github+json" \
           https://api.github.com/repos/${{ github.repository }}/branches/main/protection \
           -d '{"required_pull_request_reviews": {"dismissal_restrictions": {"users": ["'${{ github.actor }}'"], "teams": []}, "dismissal_approvals": {"users": ["'${{ github.actor }}'"], "teams": []}}}'
