--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,8 +26,22 @@ jobs:
           curl -X PUT \
           -H "Authorization: Bearer ${{ secrets.token }}" \
           -H "Accept: application/vnd.github+json" \
-          https://api.github.com/repos/${{ github.repository }}/branches/main/protection \
-          -d '{"required_pull_request_reviews": {"dismissal_restrictions": {"users": ["'${{ github.actor }}'"], "teams": []}, "dismissal_approvals": {"users": ["'${{ github.actor }}'"], "teams": []}}}'
+          https://api.github.com/repos/${{ github.repository }}/branches/${{ env.BRANCH_NAME }}/protection \
+          -d '{
+            "enforce_admins": false,
+            "required_status_checks": null,
+            "required_pull_request_reviews": {
+              "dismissal_restrictions": {
+                "users": ["'${{ github.actor }}'"],
+                "teams": []
+              },
+              "dismissal_approvals": {
+                "users": ["'${{ github.actor }}'"],
+                "teams": []
+              }
+            },
+            "restrictions": null
+          }'
 
       - name: Wait for workflow to complete
         run: |
