--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,16 +29,14 @@ jobs:
           https://api.github.com/repos/${{ github.repository }}/branches/${{ env.BRANCH_NAME }}/protection \
           -d '{
             "enforce_admins": false,
-            "required_status_checks": null,
+            "required_status_checks": {
+              "strict": true,
+              "contexts": []
+            },
             "required_pull_request_reviews": {
-              "dismissal_restrictions": {
-                "users": ["'${{ github.actor }}'"],
-                "teams": []
-              },
-              "dismissal_approvals": {
-                "users": ["'${{ github.actor }}'"],
-                "teams": []
-              }
+              "dismiss_stale_reviews": true,
+              "require_code_owner_reviews": false,
+              "required_approving_review_count": 1
             },
             "restrictions": null
           }'
