--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,7 +26,7 @@ jobs:
           curl -X PUT \
           -H "Authorization: Bearer ${{ secrets.token }}" \
           -H "Accept: application/vnd.github+json" \
-          https://api.github.com/repos/${{ github.repository }}/branches/${{ env.BRANCH_NAME }}/protection \
+          https://api.github.com/repos/${{ github.repository }}/branches/main/protection \
           -d '{
             "enforce_admins": false,
             "required_status_checks": {
@@ -49,9 +49,9 @@ jobs:
       - name: Revert branch protection settings
         run: |
           curl -X PUT \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer ${{ secrets.token }}" \
           -H "Accept: application/vnd.github+json" \
-          https://api.github.com/repos/${{ github.repository }}/branches/${{ env.BRANCH_NAME }}/protection \
+          https://api.github.com/repos/${{ github.repository }}/branches/main/protection \
           -d '{
             "enforce_admins": false,
             "required_status_checks": {
