--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -61,7 +61,7 @@ jobs:
             "required_pull_request_reviews": {
               "dismiss_stale_reviews": false,
               "require_code_owner_reviews": false,
-              "required_approving_review_count": null
+              "required_approving_review_count": 0
             },
             "restrictions": null
           }'
